# Catalyst

.github/workflows/: build.yml
Managed/: Catalyst.sln
Managed/Catalyst/: Catalyst.cs  Catalyst.csproj  CatalystCore.cs
Managed/Catalyst.Shared/: Catalyst.Shared.shproj
Managed/Catalyst/API/: DependsOnModAttribute.cs  ILog.cs  IMod.cs  ModAttribute.cs  ModNotFoundException.cs  Paths.cs
Managed/Catalyst/API/Systems/: IModManager.cs  IModRepository.cs  IStorageManager.cs
Managed/Catalyst/Native/: CatalystMonoContext.cs
Managed/Catalyst/Runtime/: ConsoleEx.cs  Log.cs  LogLevel.cs  ModContext.cs  ModId.cs  ModPaths.cs
Managed/Catalyst/Runtime/Systems/: LogManager.cs  ModManager.cs  ModRepository.cs  StorageManager.cs
Managed/Catalyst/Runtime/Utilities/: ConsoleEx.cs  Paths.cs
Native/: CMakeLists.txt  catalyst.cfg
Native/src/: catalyst.cfg  console_alloc.c  console_alloc.h  dllmain.c  dllmain.def  shim_bridge.c  shim_context.h  shim_lifecycle.c  util.h
Native/src/mono_loader/: catalyst_bootstrap.c  catalyst_bootstrap.h  mono_loader.c  mono_loader.h
Native/src/shims/: shims.h  winhttp.c  winhttp.h
